--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- /* header */ -->
 
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigatiom">
           <a class="header-logo" href="./index.html">Web<span>Studio</span></a>
           <ul class="header-menu-list">
@@ -67,7 +67,7 @@
 
       <section class="advantages">
         <div class="container">
-          <h2 class="advantages-title">Arbitrary</h2>
+          <!-- <h2 class="advantages-title">Arbitrary</h2> -->
           <ul class="advantages-list">
             <li class="advantages-item">
               <h3 class="advantages-item-title">Strategy</h3>
@@ -103,128 +103,134 @@
       <!-- /* team */ -->
 
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-list-item">
-            <img
-              class="team-images"
-              width="264"
-              src="./images/img.jpg"
-              alt="photo1"
-            />
-            <h3 class="team-name-title">Mark Guerrero</h3>
-            <p class="team-specifics">Product Designer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-images"
-              width="264"
-              src="./images/img-2.jpg"
-              alt="photo2"
-            />
-            <h3 class="team-name-title">Tom Ford</h3>
-            <p class="team-specifics">Frontend Developer</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-images"
-              width="264"
-              src="./images/img-3.jpg"
-              alt="photo3"
-            />
-            <h3 class="team-name-title">Camila Garcia</h3>
-            <p class="team-specifics">Marketing</p>
-          </li>
-          <li class="team-list-item">
-            <img
-              class="team-images"
-              width="264"
-              src="./images/img-4.jpg"
-              alt="photo4"
-            />
-            <h3 class="team-name-title">Daniel Wilson</h3>
-            <p class="team-specifics">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-list-item">
+              <img
+                class="team-images"
+                width="264"
+                src="./images/img.jpg"
+                alt="photo1"
+              />
+              <h3 class="team-name-title">Mark Guerrero</h3>
+              <p class="team-specifics">Product Designer</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-images"
+                width="264"
+                src="./images/img-2.jpg"
+                alt="photo2"
+              />
+              <h3 class="team-name-title">Tom Ford</h3>
+              <p class="team-specifics">Frontend Developer</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-images"
+                width="264"
+                src="./images/img-3.jpg"
+                alt="photo3"
+              />
+              <h3 class="team-name-title">Camila Garcia</h3>
+              <p class="team-specifics">Marketing</p>
+            </li>
+            <li class="team-list-item">
+              <img
+                class="team-images"
+                width="264"
+                src="./images/img-4.jpg"
+                alt="photo4"
+              />
+              <h3 class="team-name-title">Daniel Wilson</h3>
+              <p class="team-specifics">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- /* portfolio */ -->
 
       <section class="portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-images"
-              width="360"
-              src="./images/img-5.jpg"
-              alt="Banking"
-            />
-            <h3 class="portfolio-images-title">Banking App</h3>
-            <p class="portfolio-images-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-images"
-              width="360"
-              src="./images/img-6.jpg"
-              alt="Cashless"
-            />
-            <h3 class="portfolio-images-title">Cashless Payment</h3>
-            <p class="portfolio-images-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-images"
-              width="360"
-              src="./images/img-7.jpg"
-              alt="Meditation"
-            />
-            <h3 class="portfolio-images-title">Meditation App</h3>
-            <p class="portfolio-images-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-images"
-              width="360"
-              src="./images/img-8.jpg"
-              alt="Taxi"
-            />
-            <h3 class="portfolio-images-title">Taxi Service</h3>
-            <p class="portfolio-images-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-images"
-              width="360"
-              src="./images/img-9.jpg"
-              alt="Screen"
-            />
-            <h3 class="portfolio-images-title">Screen Illustrations</h3>
-            <p class="portfolio-images-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-images"
-              width="360"
-              src="./images/img-10.jpg"
-              alt="Online"
-            />
-            <h3 class="portfolio-images-title">Online Courses</h3>
-            <p class="portfolio-images-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-images"
+                width="360"
+                src="./images/img-5.jpg"
+                alt="Banking"
+              />
+              <h3 class="portfolio-images-title">Banking App</h3>
+              <p class="portfolio-images-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-images"
+                width="360"
+                src="./images/img-6.jpg"
+                alt="Cashless"
+              />
+              <h3 class="portfolio-images-title">Cashless Payment</h3>
+              <p class="portfolio-images-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-images"
+                width="360"
+                src="./images/img-7.jpg"
+                alt="Meditation"
+              />
+              <h3 class="portfolio-images-title">Meditation App</h3>
+              <p class="portfolio-images-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-images"
+                width="360"
+                src="./images/img-8.jpg"
+                alt="Taxi"
+              />
+              <h3 class="portfolio-images-title">Taxi Service</h3>
+              <p class="portfolio-images-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-images"
+                width="360"
+                src="./images/img-9.jpg"
+                alt="Screen"
+              />
+              <h3 class="portfolio-images-title">Screen Illustrations</h3>
+              <p class="portfolio-images-text">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-images"
+                width="360"
+                src="./images/img-10.jpg"
+                alt="Online"
+              />
+              <h3 class="portfolio-images-title">Online Courses</h3>
+              <p class="portfolio-images-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- /* footer */ -->
 
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="footer-span">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-span">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
