--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header class="header">
       <div class="container header-container">
-        <nav class="header-navigatiom">
+        <nav class="header-navigation">
           <a class="header-logo" href="./index.html">Web<span>Studio</span></a>
           <ul class="header-menu-list">
             <li class="header-menu-item">
