--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <section class="advantages">
         <div class="container">
-          <!-- <h2 class="advantages-title">Arbitrary</h2> -->
+          <h2 class="visually-hidden">Arbitrary</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
               <h3 class="advantages-item-title">Strategy</h3>
