--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
                 src="./images/img.jpg"
                 alt="photo1"
               />
-              <h3 class="team-name-title">Mark Guerrero</h3>
-              <p class="team-specifics">Product Designer</p>
+              <div>
+                <h3 class="team-name-title">Mark Guerrero</h3>
+                <p class="team-specifics">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -123,8 +125,10 @@
                 src="./images/img-2.jpg"
                 alt="photo2"
               />
-              <h3 class="team-name-title">Tom Ford</h3>
-              <p class="team-specifics">Frontend Developer</p>
+              <div>
+                <h3 class="team-name-title">Tom Ford</h3>
+                <p class="team-specifics">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -133,8 +137,10 @@
                 src="./images/img-3.jpg"
                 alt="photo3"
               />
-              <h3 class="team-name-title">Camila Garcia</h3>
-              <p class="team-specifics">Marketing</p>
+              <div>
+                <h3 class="team-name-title">Camila Garcia</h3>
+                <p class="team-specifics">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -143,8 +149,10 @@
                 src="./images/img-4.jpg"
                 alt="photo4"
               />
-              <h3 class="team-name-title">Daniel Wilson</h3>
-              <p class="team-specifics">UI Designer</p>
+              <div class="team-info">
+                <h3 class="team-name-title">Daniel Wilson</h3>
+                <p class="team-specifics">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
