--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 src="./images/img.jpg"
                 alt="photo1"
               />
-              <div>
+              <div class="team-information">
                 <h3 class="team-name-title">Mark Guerrero</h3>
                 <p class="team-specifics">Product Designer</p>
               </div>
@@ -125,7 +125,7 @@
                 src="./images/img-2.jpg"
                 alt="photo2"
               />
-              <div>
+              <div class="team-information">
                 <h3 class="team-name-title">Tom Ford</h3>
                 <p class="team-specifics">Frontend Developer</p>
               </div>
@@ -137,7 +137,7 @@
                 src="./images/img-3.jpg"
                 alt="photo3"
               />
-              <div>
+              <div class="team-information">
                 <h3 class="team-name-title">Camila Garcia</h3>
                 <p class="team-specifics">Marketing</p>
               </div>
@@ -149,7 +149,7 @@
                 src="./images/img-4.jpg"
                 alt="photo4"
               />
-              <div class="team-info">
+              <div class="team-information">
                 <h3 class="team-name-title">Daniel Wilson</h3>
                 <p class="team-specifics">UI Designer</p>
               </div>
