--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
                 src="./images/img-5.jpg"
                 alt="Banking"
               />
-              <h3 class="portfolio-images-title">Banking App</h3>
-              <p class="portfolio-images-text">App</p>
+              <div class="portfolio-categori">
+                <h3 class="portfolio-images-title">Banking App</h3>
+                <p class="portfolio-images-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -180,8 +182,10 @@
                 src="./images/img-6.jpg"
                 alt="Cashless"
               />
-              <h3 class="portfolio-images-title">Cashless Payment</h3>
-              <p class="portfolio-images-text">Marketing</p>
+              <div class="portfolio-categori">
+                <h3 class="portfolio-images-title">Cashless Payment</h3>
+                <p class="portfolio-images-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -190,8 +194,10 @@
                 src="./images/img-7.jpg"
                 alt="Meditation"
               />
-              <h3 class="portfolio-images-title">Meditation App</h3>
-              <p class="portfolio-images-text">App</p>
+              <div class="portfolio-categori">
+                <h3 class="portfolio-images-title">Meditation App</h3>
+                <p class="portfolio-images-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -200,8 +206,10 @@
                 src="./images/img-8.jpg"
                 alt="Taxi"
               />
-              <h3 class="portfolio-images-title">Taxi Service</h3>
-              <p class="portfolio-images-text">Marketing</p>
+              <div class="portfolio-categori">
+                <h3 class="portfolio-images-title">Taxi Service</h3>
+                <p class="portfolio-images-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -210,8 +218,10 @@
                 src="./images/img-9.jpg"
                 alt="Screen"
               />
-              <h3 class="portfolio-images-title">Screen Illustrations</h3>
-              <p class="portfolio-images-text">Design</p>
+              <div class="portfolio-categori">
+                <h3 class="portfolio-images-title">Screen Illustrations</h3>
+                <p class="portfolio-images-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -220,8 +230,10 @@
                 src="./images/img-10.jpg"
                 alt="Online"
               />
-              <h3 class="portfolio-images-title">Online Courses</h3>
-              <p class="portfolio-images-text">Marketing</p>
+              <div class="portfolio-categori">
+                <h3 class="portfolio-images-title">Online Courses</h3>
+                <p class="portfolio-images-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
