--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <div class="button-hero">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          </div>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
